<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddDepotActivity"
    android:background="@color/light_background">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        style="?android:actionBarStyle"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:clipToPadding="false">

            <com.github.captain_miao.optroundcardview.OptRoundCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:optRoundCardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:clipToPadding="false"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryText"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="Depot Information"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:text="Nama Cabang Baru"/>

                    <EditText
                        android:id="@+id/nameNewDepot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:background="@drawable/et_background_plain"
                        android:textColor="@color/primaryText"
                        android:inputType="text"
                        android:hint="Nama Cabang Depot Baru"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:text="@string/location"/>

                    <EditText
                        android:id="@+id/locationNewDepot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:background="@drawable/et_background_plain"
                        android:textColor="@color/primaryText"
                        android:inputType="text"
                        android:hint="@string/location"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:text="@string/phone"/>

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:background="@drawable/et_background_plain"
                        android:textColor="@color/primaryText"
                        android:inputType="text"
                        android:hint="@string/phone"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:text="Harga / Galon"/>

                    <EditText
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:background="@drawable/et_background_plain"
                        android:textColor="@color/primaryText"
                        android:inputType="number"
                        android:hint="@string/asking_price"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:text="@string/desc"/>

                    <EditText
                        android:id="@+id/message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:minHeight="150dp"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:gravity="top|start"
                        android:background="@drawable/et_background_plain"
                        android:textColor="@color/primaryText"
                        android:inputType="textMultiLine"
                        android:hint="@string/add_part_desc"/>

                </LinearLayout>

            </com.github.captain_miao.optroundcardview.OptRoundCardView>


            <com.github.captain_miao.optroundcardview.OptRoundCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:optRoundCardElevation="5dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:clipToPadding="false">

                    <TextView
                        android:id="@+id/photos_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/primaryText"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/upload_photos"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        app:layout_constraintBottom_toBottomOf="@id/photos_title"
                        app:layout_constraintStart_toEndOf="@id/photos_title"
                        android:textColor="@color/secondaryText"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/add_atleast_2_photos" />

                    <ImageView
                        android:id="@+id/mainImage"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        app:layout_constraintTop_toBottomOf="@id/photos_title"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:scaleType="centerCrop"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/photosRv"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:overScrollMode="never"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@id/mainImage"
                        tools:listitem="@layout/item_image"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/addPhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:drawablePadding="10dp"
                        android:padding="10dp"
                        app:layout_constraintTop_toBottomOf="@id/photosRv"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="@drawable/wire_button"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/choose_photos"/>

                </android.support.constraint.ConstraintLayout>

            </com.github.captain_miao.optroundcardview.OptRoundCardView>

            <Button
                android:id="@+id/buttonNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/flat_button"
                android:textColor="@android:color/white"
                android:text="POST DEPOT"
                tools:background="@drawable/rounded_button"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>